changed some sudo code in script.js

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
       crossorigin="anonymous"
     ></script>
-    <!-- Advanced Format Plugin for 1st/2nd/3rd/ect using 'Do' -->
+    <!-- Advanced Format Plugin API source for 1st/2nd/3rd/ect using 'Do' -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/plugin/advancedFormat.js"></script>
-    <!-- Add-on/Activate plugin -->
+    <!-- Activate plugin -->
     <script>dayjs.extend(window.dayjs_plugin_advancedFormat)</script>    
     <!-- Main JS file -->
     <script src="./assets/script.js"></script>
